# wayz

./: CMakeLists.txt  Kconfig  README.md  west.yml
boards/: README.md
boards/nsing/n32g430f8_evb/: Kconfig.defconfig  Kconfig.n32g430f8_evb  README.md  board.cmake  board.yml  n32g430f8_evb.dts  n32g430f8_evb.yaml  n32g430f8_evb_defconfig
drivers/: CMakeLists.txt  Kconfig  README.md
drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_n32.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_n32.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_n32.c
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  exti_n32.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_n32.c
drivers/reset/: CMakeLists.txt  Kconfig  prst_n32.c
drivers/serial/: CMakeLists.txt  Kconfig  uart_n32.c
dts/arm/nsing/n32g430/: n32g430-pinctrl.dtsi  n32g430.dtsi  n32g430f8.dtsi
dts/bindings/: vendor-prefixes.txt
dts/bindings/clock/: nsing,n32-prst.yaml  nsing,n32-rcc.yaml
dts/bindings/gpio/: nsing,n32-gpio.yaml
dts/bindings/i2c/: nsing,n32-i2c.yaml
dts/bindings/interrupt-controller/: nsing,n32-exti.yaml
dts/bindings/pinctrl/: nsing,n32-pinctrl.yaml
dts/bindings/serial/: nsing,n32-uart.yaml
gaz/: CMakeLists.txt  prj.conf
gaz/boards/: n32g430f8_evb.overlay
gaz/src/: data_uart.c  main.c  mgr.c
hal_nsing/: CMakeLists.txt  Kconfig  README.md
hal_nsing/n32g430/: CMakeLists.txt
hal_nsing/n32g430/CMSIS/device/: n32g430.h  n32g430_conf.h  n32g430_flash.ld  system_n32g430.c  system_n32g430.h
hal_nsing/n32g430/CMSIS/device/startup/: startup_n32g430.s  startup_n32g430_EWARM.s  startup_n32g430_gcc.s
hal_nsing/n32g430/ext/: CMakeLists.txt
hal_nsing/n32g430/ext/inc/: stm32f103.h  stm32f1xx_ll_dma.h  stm32f1xx_ll_i2c.h
hal_nsing/n32g430/ext/src/: stm32f1xx_ll_dma.c
hal_nsing/n32g430/std_periph_driver/inc/: misc.h  n32g430_adc.h  n32g430_beeper.h  n32g430_can.h  n32g430_comp.h  n32g430_crc.h  n32g430_dbg.h  n32g430_dma.h  n32g430_exti.h  n32g430_flash.h  n32g430_gpio.h  n32g430_i2c.h  n32g430_iwdg.h  n32g430_lptim.h  n32g430_pwr.h  n32g430_rcc.h  n32g430_rtc.h  n32g430_spi.h  n32g430_tim.h  n32g430_usart.h  n32g430_wwdg.h
hal_nsing/n32g430/std_periph_driver/src/: misc.c  n32g430_adc.c  n32g430_beeper.c  n32g430_can.c  n32g430_comp.c  n32g430_crc.c  n32g430_dbg.c  n32g430_dma.c  n32g430_exti.c  n32g430_flash.c  n32g430_gpio.c  n32g430_i2c.c  n32g430_iwdg.c  n32g430_lptim.c  n32g430_pwr.c  n32g430_rcc.c  n32g430_rtc.c  n32g430_spi.c  n32g430_tim.c  n32g430_usart.c  n32g430_wwdg.c
include/zephyr/drivers/adc/: adc_n32.h
include/zephyr/drivers/clock_control/: clock_control_n32.h
include/zephyr/drivers/gpio/: gpio_n32.h
include/zephyr/drivers/gpio/pinctrl/: n32g430-gpio-remap.h  n32g430-pinctrl.h
include/zephyr/drivers/i2c/: i2c_n32.h
include/zephyr/drivers/interrupt_controller/: exti_n32.h
include/zephyr/drivers/pinctrl/: pinctrl_n32.h
include/zephyr/drivers/timer/: timer_n32.h
include/zephyr/dt-bindings/clock/: n32g430-clock.h
include/zephyr/dt-bindings/pinctrl/: n32g430-gpio-remap.h  n32g430-pinctrl.h
soc/nsing/n32g4/n32g430/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/nsing/n32g4/n32g430/n32g430/: CMakeLists.txt  Kconfig.defconfig.n32g430f8  Kconfig.defconfig.series  Kconfig.soc  README.md  pinctrl_soc.h  soc.c  soc.h
zephyr/: module.yml
